@@ -1,5 +1,10 @@
 2008-11-28  Richard Hult  <richard@imendio.com>
 
+	* src/dh-window.c (window_open_new_tab): Add commented out code
+	snippet to make it easier to tweak the CSS.
+
+2008-11-28  Richard Hult  <richard@imendio.com>
+
 	* src/dh-assistant-view.c (assistant_button_press_event): Don't
 	block button 1 events. Fixes selecting text in the assistant.
 
